# particle

./: .gitignore  BAZEL_SETUP_SUMMARY.md  BUILD  CMAKE_TO_BAZEL.md  Makefile.bazel  README_BAZEL.md  WORKSPACE  bazel-bin  bazel-out  bazel-particle  bazel-testlogs  install_bazel.sh  verify_bazel_setup.sh
assets/: BUILD
doc/: BUILD
intern/: BUILD
intern/atomic/: BUILD
intern/cycles/: BUILD
intern/essential_headers/: BUILD
intern/ghost/: BUILD
intern/guardedalloc/: BUILD
intern/memutil/: BUILD
intern/mikktspace/: BUILD
intern/sky/: BUILD
release/: BUILD
scripts/: BUILD
source/: BUILD
source/blender/: BUILD
source/blender/blenloader_core/: BUILD
source/creator/: BUILD
tests/: BUILD
tools/: BUILD
